<resources>
    <string name="app_name">Cat and Dog</string>
    <string name="login">Entrar</string>
    <string name="register">Registar</string>
    <string name="email">Endereço de Email</string>
    <string name="PassWord">Palavra Passe</string>
    <string name="Aviso">Conteudo inválido!</string>
    <string name="Voltar">Voltar</string>
    <string name="Somos">Quem Somos</string>
    <string name="PerfilN">Nome do utilizador</string>
    <string name="Morada">Região</string>
    <string name="Contacto">Ex: 977876600</string>
    <string name="Marcações">As minhas marcações</string>
    <string name="quemsomos">O projeto CatandDog surgiu no âmbito de ajudar os animais em canis e gatis.\n\n
Só no ano de 2018 estima-se que cerca de  36 mil animais foram abandonados.
\n\n O nosso objetivo é melhorar a qualidade de vida dos nosso patudos dentro dos canis. através de doações como comida, produtos de higiene entre outros</string>
    <string name="Contribuições">As minhas contribuições</string>
    <string name="nome">Nome</string>
    <string name="apelido">Apelido</string>
    <string name="Numberphone">Contacto</string>
    <string name="Distrito">Distrito</string>
    <string name="ExemploMarcações">Ex.Alaar - 12.07.21</string>
    <string name="ExemploMarcações1">Ex.Pac - 24.11.21</string>
    <string name="ExemploContribuições">Ex.As minhas marcações</string>
    <string name="Nascimento">Data de nascimento</string>
    <string name="title_activity_calendar_re">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="Distritos">
        <item>Distrito</item>
        <item>Aveiro</item>
        <item>Beja</item>
        <item>Braga</item>
        <item>Bragança</item>
        <item>Castelo Branco</item>
        <item>Coimbra</item>
        <item>Évora</item>
        <item>Faro</item>
        <item>Guarda</item>
        <item>Leiria</item>
        <item>Lisboa</item>
        <item>Portalegre</item>
        <item>Porto</item>
        <item>Santarém</item>
        <item>Setúbal</item>
        <item>Viana do Castelo</item>
        <item>Vila Real</item>
        <item>Viseu </item>
    </string-array>

    <string name="Cão">"Cão"</string>
    <string name="Onde_estamos">"Onde estamos?"</string>
    <string name="Exemplo_canil">PAB: Associação projeto animais de Barcelos</string>
    <string name="Rua">Rua Condessa Dona Toda nº33</string>
    <string name="Telemovel">911 970 207</string>
    <string name="Exemplo_canil2">ALAAR:Associação Limiana dos Amigos dos Animais de Rua </string>
    <string name="Algo_correu_mal">Parece que algo falhou. Por favor tente novamente</string>
    <string name="Correu_bem">Agendamento feito som sucesso. Obrigado pela sua colaboração!</string>
    <string name="Dias_li">Dias livres</string>
    <string name="Dias_oc">Dias ocupados</string>
















</resources>


