<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appcolor6"
    android:orientation="vertical">

    <TextView
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/NomeReg"
            style="@style/EditTextBox"
            android:layout_width="@dimen/BoxWidthregisto"
            android:layout_marginLeft="@dimen/margemLeft"
            android:layout_marginTop="@dimen/margemTop"
            android:hint="@string/nome" />

        <EditText
            android:id="@+id/ApelidoReg"
            style="@style/EditTextBox"
            android:layout_width="@dimen/BoxWidthregisto"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margemTop"
            android:layout_marginRight="@dimen/margemRight"
            android:hint="@string/apelido" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDate"
            style="@style/EditTextBox"
            android:layout_width="@dimen/BoxWidthregisto"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/margemLeft"
            android:layout_marginTop="@dimen/espaçoEntreCaixas"
            android:hint="Data de Nascimento" />

        <EditText
            android:id="@+id/ContactoReg"
            style="@style/EditTextBox"
            android:layout_width="@dimen/BoxWidthregisto"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/espaçoEntreCaixas"
            android:layout_marginRight="@dimen/margemRight"
            android:digits="@string/Numberphone"
            android:hint="@string/Numberphone"
            android:inputType="phone" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/EmailReg"
            style="@style/EditTextBox"
            android:layout_width="@dimen/BoxWidthregisto"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/espaçoEntreCaixas"
            android:layout_marginRight="@dimen/margemRight"
            android:hint="@string/email" />

        <Spinner
            android:id="@+id/aSpinner"
            style="@style/EditTextBox"
            android:layout_width="@dimen/BoxWidthregisto"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/margemLeft"
            android:layout_marginTop="10dp"
            android:entries="@array/Distritos"
            android:hint="@string/Distrito"
            android:textAlignment="center" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/btn_go_to_sobre"
            style="@style/ButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="190dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/btn_go_to_main"
            style="@style/ButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="130dp"
            android:text="@string/Voltar" />
    </RelativeLayout>

</LinearLayout>



