<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appcolor1"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-80dp"
        android:background="@color/appcolor1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/margemTop"
                android:background="@color/appcolor1"
                android:src="@mipmap/user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margemTop"
                android:layout_toEndOf="@+id/user_image"
                android:layout_toRightOf="@+id/user_image"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/appcolor1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/EstiloIcons"
                        android:src="@mipmap/person" />

                    <TextView
                        style="@style/EstiloTextoCaixas"
                        android:text="@string/PerfilN" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/appcolor1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/EstiloIcons"
                        android:src="@mipmap/home" />

                    <TextView
                        style="@style/EstiloTextoCaixas"
                        android:text="@string/Morada" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/appcolor1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/EstiloIcons"
                        android:src="@mipmap/phone" />

                    <TextView
                        style="@style/EstiloTextoCaixas"
                        android:text="@string/Contacto" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/appcolor1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/EstiloIcons"
                        android:src="@mipmap/mail" />

                    <TextView
                        style="@style/EstiloTextoCaixas"
                        android:text="@string/email" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margemTop"
        android:orientation="horizontal" />

    <TextView
        style="@style/EstiloPerfilCliente"
        android:layout_gravity="left|start"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/Marcações" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/espaçoEntreCaixas"
        android:background="@color/appcolor1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            style="@style/EstiloIcons"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:src="@mipmap/relogio" />

        <TextView
            style="@style/EstiloTextoCaixas"
            android:text="@string/ExemploMarcações" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appcolor1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            style="@style/EstiloIcons"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:src="@mipmap/relogio" />

        <TextView
            style="@style/EstiloTextoCaixas"
            android:text="@string/ExemploMarcações1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margemTop"
        android:orientation="horizontal" />

    <TextView
        style="@style/EstiloPerfilCliente"
        android:layout_gravity="left|start"
        android:layout_marginStart="30dp"
        android:text="@string/Contribuições" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appcolor1"
        android:gravity="center_vertical" />

    <ImageView
        style="@style/EstiloIcons"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:src="@mipmap/contribu"/>

</LinearLayout>